# yolov8-onnx-cpp

./: .clang-format.yml  .gitignore  CMakeLists.txt
src/: main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: common.cpp  ops.cpp
